--- a/SEP21/Areas/QuanLy/Views/NCKHs/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NCKHs/Index.cshtml
@@ -17,10 +17,8 @@
         </th>
         <th>
             Nội Dung
-        </th>
-        <th></th>
+        </th>      
     </tr>
-
 @foreach (var item in Model) {
     <tr>
         <td>
@@ -30,11 +28,10 @@
             @Html.DisplayFor(modelItem => item.NoiDung)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Chi Tiết", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
-
 </table>
