--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Index.cshtml
@@ -1,45 +1,49 @@
-﻿@model IEnumerable<SEP21.Models.DoanHoiKhoa>
+﻿@model IEnumerable<SEP21.Models.TuyenDung>
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Đoàn Hội Khoa</h2>
+<h2>Tuyển Dụng</h2>
 
 <p>
-    @Html.ActionLink("Tạo Mới", "Create")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            Chức vụ
+            Vị Trí
         </th>
         <th>
-            Đoàn
+            Số Lượng
         </th>
         <th>
-            Hội
+            Yêu Cầu
         </th>
         <th>
-            MSSV
+            Tiêu Đề
+        </th>
+        <th>
+            Loại Tuyển Dụng
         </th>
         <th></th>
     </tr>
-
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.ChucVu)
+            @Html.DisplayFor(modelItem => item.ViTri)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Doan)
+            @Html.DisplayFor(modelItem => item.SoLuong)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Hoi)
+            @Html.DisplayFor(modelItem => item.YeuCau)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SinhVien.MSSV)
+            @Html.DisplayFor(modelItem => item.TieuDe)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LoaiTuyenDung1.LoaiTuyenDung1)
         </td>
         <td>
             @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
