--- a/SEP21/Areas/QuanLy/Views/BaiViets/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Delete.cshtml
@@ -5,61 +5,51 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Xóa</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn Chắc Chắn Muốn Xóa Không ?</h3>
 <div>
-    <h4>BaiViet</h4>
+    <h4>Bài Viết</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.NgayDangBai)
+            Ngày Đăng Bài
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.NgayDangBai)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.TieuDe)
+            Tiêu Đề
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.TieuDe)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.NoiDung)
+            Nội Dung
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.NoiDung)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.LoaiBaiViet1.TenLoaiBaiViet)
+            Tên Loại Bài Viết
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.LoaiBaiViet1.TenLoaiBaiViet)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.NhanVienKhoa.MaNhanVien)
+            Mã Nhân Viên
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.NhanVienKhoa.MaNhanVien)
         </dd>
-
     </dl>
-
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Trở Lại", "Index")
         </div>
     }
 </div>
