--- a/SEP21/Areas/QuanLy/Views/DoanHoiKhoas/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/DoanHoiKhoas/Details.cshtml
@@ -5,47 +5,39 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Chi Tiết </h2>
 
 <div>
-    <h4>DoanHoiKhoa</h4>
+    <h4>Đoàn Hội Khoa</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ChucVu)
+           Chức Vụ
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.ChucVu)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.Doan)
+            Đoàn
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Doan)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.Hoi)
+            Hội
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Hoi)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.SinhVien.MSSV)
+            MSSV
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.SinhVien.MSSV)
         </dd>
-
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Trở Lại", "Index")
 </p>
