--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -57,15 +57,7 @@
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#"><i class="fa fa-home fa-fw"></i>Quay về trang User</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                            <a href="#"><i class="fa fa-sign-out fa-fw"></i> Đăng Xuất </a>
                         </li>
                     </ul>
                 </li>
@@ -130,7 +122,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index","TuyenDung")"><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
+                            <a href="@Url.Action("Index","TuyenDungs")""><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
                         </li>
                     </ul>
                 </div>
