--- a/SEP21/Areas/QuanLy/Views/ThanhTiches/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ThanhTiches/Delete.cshtml
@@ -5,15 +5,15 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Xóa</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn Chắc Chắn Muốn Xóa Không ?</h3>
 <div>
-    <h4>ThanhTich</h4>
+    <h4>Thành Tích</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TenThanhTich)
+            Tên Thành Tích
         </dt>
 
         <dd>
@@ -21,7 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NguoiDatThanhTich)
+            Người Đạt Thành Tich
         </dt>
 
         <dd>
@@ -29,7 +29,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NoiDung)
+            Nội Dung
         </dt>
 
         <dd>
@@ -42,8 +42,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Trở Lại", "Index")
         </div>
     }
 </div>
