--- a/SEP21/Areas/QuanLy/Views/ThanhTiches/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ThanhTiches/Index.cshtml
@@ -36,11 +36,10 @@
             @Html.DisplayFor(modelItem => item.NoiDung)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Chi Tiết", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
-
 </table>
