Add GioiThieu for user

--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -41,12 +41,10 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li class="dropdown">
-                        <a href="@Url.Action("Index","Home")"><span>Giới thiệu</span> <i class="bi bi-chevron-down"></i></a>
+                        <a href="#"><span>Giới thiệu</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="#">Sứ mạng</a></li>
-                            <li><a href="#">Tầm nhìn</a></li>
-                            <li><a href="#">Triết lý giáo dục</a></li>
-                            <li><a href="#">Cơ cấu tổ chức</a></li>
+                            <li><a href="@Url.Action("Index","GioiThieus")" target="_blank">Sứ mạng - Tầm Nhìn - Triết Lý Giáo Dục</a></li>
+                            <li><a href="@Url.Action("Index2","GioiThieus")" target="_blank">Cơ cấu tổ chức</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="#about">Đào tạo</a></li>
