--- a/SEP21/Areas/QuanLy/Views/ManagerAdmin/Login.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ManagerAdmin/Login.cshtml
@@ -40,18 +40,18 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Sign in K.CNTT management</h3>
+                        <h3 class="panel-title">Quản Lý Khoa CNTT</h3>
                     </div>
                     <div class="panel-body">
                         <form role="form" action="~/QuanLy/ManagerAdmin/Login" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Esername" name="username" type="text" value="">
+                                    <input class="form-control" placeholder="Tài Khoản" name="username" type="text" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="Mật Khẩu" name="password" type="password" value="">
                                 </div>
-                                <button type="submit" class="btn btn-default">Login</button>
+                                <button type="submit" class="btn btn-default">Đăng Nhập</button>
                             </fieldset>
                         </form>
                     </div>
