--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -122,7 +122,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index","TuyenDungs")""><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
+                            <a href="@Url.Action("Index","TuyenDungs")" "><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
                         </li>
                     </ul>
                 </div>
@@ -155,5 +155,7 @@
             });
         });
     </script>
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
