--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -47,8 +47,8 @@
                     <li class="dropdown">
                         <a href="#"><span>Giới thiệu</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="@Url.Action("Index","GioiThieus")" target="_blank">Sứ mạng - Tầm Nhìn - Triết Lý Giáo Dục</a></li>
-                            <li><a href="@Url.Action("Index2","GioiThieus")" target="_blank">Cơ cấu tổ chức</a></li>
+                            <li><a href="@Url.Action("Index","GioiThieus")">Sứ mạng - Tầm Nhìn - Triết Lý Giáo Dục</a></li>
+                            <li><a href="@Url.Action("Index2","GioiThieus")">Cơ cấu tổ chức</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="#about">Đào tạo</a></li>
