--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>About Us</h2>
+                    <h2>Tin tức - hoạt động</h2>
                 </div>
                 <div class="row content">
                     @foreach (var item in Model)
