--- a/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-md-2" for="IMG">Picture</label>
+        <label class="control-label col-md-2" for="IMG">Hình Ảnh</label>
         <div class="col-md-10">
             <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png" />
         </div>
