--- a/SEP21/Areas/QuanLy/Views/DoanHoiKhoas/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/DoanHoiKhoas/Details.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-           Chức Vụ
+            Chức Vụ
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ChucVu)
@@ -35,7 +35,14 @@
         <dd>
             @Html.DisplayFor(model => model.SinhVien.MSSV)
         </dd>
+        <dt>
+            Hình Ảnh
+        </dt>
     </dl>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="IMG"></label>
+        <img id="Picture" src="@Url.Action("Picture", new { Model.ID })" />
+    </div>
 </div>
 <p>
     @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = Model.ID }) |
