--- a/SEP21/Areas/QuanLy/Views/DoanHoiKhoas/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/DoanHoiKhoas/Index.cshtml
@@ -24,29 +24,34 @@
         <th>
             MSSV
         </th>
-        <th></th>
+        <th>
+            Hình Ảnh
+        </th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ChucVu)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Doan)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Hoi)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SinhVien.MSSV)
-        </td>
-        <td>
-            @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Chi Tiết", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.ChucVu)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Doan)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Hoi)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.SinhVien.MSSV)
+    </td>
+    <td>
+        <img src="@Url.Action("Picture", new { item.ID })" width="50px" height="50px" />
+    </td>
+    <td>
+        @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = item.ID }) |
+        @Html.ActionLink("Chi Tiết", "Details", new { id = item.ID }) |
+        @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
+    </td>
+</tr>
 }
 
 </table>
