--- a/SEP21/Areas/QuanLy/Views/NCKHs/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NCKHs/Create.cshtml
@@ -7,10 +7,10 @@
 
 <h2>Tạo Mới</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "NCKHs", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Nghiên Cứu Khoa Học</h4>
         <hr />
@@ -30,7 +30,13 @@
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            <label class="control-label col-md-2" for="IMG">Hình Ảnh</label>
+            <div class="col-md-10">
+                <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png"  />
+            </div>
+            <img id="Picture" />
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Tạo" class="btn btn-default" />
@@ -38,7 +44,21 @@
         </div>
     </div>
 }
-
 <div>
     @Html.ActionLink("Trở Lại", "Index")
 </div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        function readPicture(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('img#Picture').attr('src', e.target.result);
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+    </script>
+}
