--- a/SEP21/Areas/QuanLy/Views/NCKHs/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NCKHs/Details.cshtml
@@ -26,8 +26,15 @@
         <dd>
             @Html.DisplayFor(model => model.NoiDung)
         </dd>
+        <dt>
+            Hình Ảnh
+        </dt>
 
     </dl>
+</div>
+<div class="form-group">
+    <label class="control-label col-md-2" for="IMG"></label>
+    <img id="Picture" src="@Url.Action("Picture", new { Model.ID })" />
 </div>
 <p>
     @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = Model.ID }) |
