--- a/SEP21/Areas/QuanLy/Views/NCKHs/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NCKHs/Edit.cshtml
@@ -7,10 +7,10 @@
 
 <h2>Chỉnh Sửa</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "NCKHs", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Nghiên Cứu Khoa Học</h4>
         <hr />
@@ -31,6 +31,13 @@
                 @Html.EditorFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
             </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="IMG">Hình Ảnh</label>
+            <div class="col-md-10">
+                <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png" />
+            </div>
+            <img id="Picture" src="@Url.Action("Picture", new { Model.ID })" />
         </div>
 
         <div class="form-group">
