--- a/SEP21/Areas/QuanLy/Views/NCKHs/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NCKHs/Index.cshtml
@@ -18,20 +18,26 @@
         <th>
             Nội Dung
         </th>      
+        <th>
+            Hình Ảnh
+        </th>
     </tr>
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ten)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NoiDung)
-        </td>
-        <td>
-            @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Chi Tiết", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Ten)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.NoiDung)
+    </td>
+    <td>     
+        <img src="@Url.Action("Picture", new { item.ID })" width="50px" height="50px" />
+    </td>
+    <td>
+        @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = item.ID }) |
+        @Html.ActionLink("Chi Tiết", "Details", new { id = item.ID }) |
+        @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
+    </td>
+</tr>
 }
 </table>
