--- a/SEP21/Areas/QuanLy/Views/ThanhTiches/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ThanhTiches/Delete.cshtml
@@ -35,10 +35,16 @@
         <dd>
             @Html.DisplayFor(model => model.NoiDung)
         </dd>
-
+        <dt>
+            Hình Ảnh
+        </dt>
     </dl>
-
-    @using (Html.BeginForm()) {
+    <div class="form-group">
+        <label class="control-label col-md-2" for="IMG"></label>
+        <img id="Picture" src="@Url.Action("Picture", new { Model.ID })" />
+    </div>
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
