--- a/SEP21/Areas/QuanLy/Views/ThanhTiches/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ThanhTiches/Index.cshtml
@@ -21,25 +21,30 @@
         <th>
             Nội Dung
         </th>
-        <th></th>
+        <th>
+            Hình Ảnh
+        </th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TenThanhTich)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NguoiDatThanhTich)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NoiDung)
-        </td>
-        <td>
-            @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Chi Tiết", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.TenThanhTich)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.NguoiDatThanhTich)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.NoiDung)
+    </td>
+    <td>
+        <img src="@Url.Action("Picture", new { item.ID })" width="50px" height="50px" />
+    </td>
+    <td>
+        @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = item.ID }) |
+        @Html.ActionLink("Chi Tiết", "Details", new { id = item.ID }) |
+        @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
+    </td>
+</tr>
 }
 </table>
