--- a/SEP21/Areas/QuanLy/Views/BaiViets/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Index.cshtml
@@ -51,7 +51,7 @@
         @Html.DisplayFor(modelItem => item.NhanVienKhoa.MaNhanVien)
     </td>
     <td>
-        <img src="@Url.Action("Picture", new { item.ID })" width="50px" height="50px" />
+        <img src="@Url.Action("Picture", "BaiViets", new { item.ID })" width="50px" height="50px" />
     </td>
     <td>
         @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = item.ID }) |
