--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -15,14 +15,19 @@
                     @foreach (var item in Model)
                     {
                         <div class="col-lg-6">
-                                <div class="card">
-                                    <img class="img-fluid" style="max-width:100%" src="@Url.Content("~/assets1/images/card-img.jpg")" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Card title</h3>
-                                        <p class="card-text">Faucibus orci luctus et ultrices posuere cubilia Curae Integer quis ipsum in augue posuere congue.</p>
-                                        <p class="text-muted">Last updated 3 mins ago</p>
-                                    </div>
+                            <div class="card">
+                                <img class="img-fluid" style="max-width:100%" src="@Url.Action("Picture", new { item.ID })" alt="hinhanh">
+                                <div class="card-body">
+                                    <h3 class="card-title">@item.TieuDe</h3>
+                                    <p class="card-text">@item.NoiDung</p>
+                                    <p class="text-muted">Last updated 3 mins ago
+                                    @if (item.LoaiBaiViet1.TenLoaiBaiViet == "Hoạt động")
+                                    {
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    }
+                                    </p>
                                 </div>
+                            </div>
                         </div>
                     }
                 </div>
