--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -147,7 +147,7 @@
 
     <script src="@Url.Content("~/js/dataTables/jquery.dataTables.min.js")"></script>
     <script src="@Url.Content("~/js/dataTables/dataTables.bootstrap.min.js")"></script>
-
+    @RenderSection("scripts", required: false)
     @RenderSection("js", required: false)
     <script>
         $(document).ready(function () {
