--- a/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
-@section js{
+@section Scripts{
     <script src="~/Plugin/ckfinder/ckfinder.js"></script>
     <script src="~/Plugin/ckeditor/ckeditor.js"></script>
     <script>
@@ -31,13 +31,13 @@
         <hr />
 
         @*<div class="form-group">
-            <div class="col-md-3">
-                <button id="btn-img-select" class="btn btn-primary">Chọn hình ảnh</button>
-            </div>
-            <div class="col-md-9">
-                <input id="imgvalue" class="form-control" />
-            </div>
-        </div>*@
+                <div class="col-md-3">
+                    <button id="btn-img-select" class="btn btn-primary">Chọn hình ảnh</button>
+                </div>
+                <div class="col-md-9">
+                    <input id="imgvalue" class="form-control" />
+                </div>
+            </div>*@
 
 
 
