--- a/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
-@section Scripts{
+@section scripts{
     <script src="~/Plugin/ckfinder/ckfinder.js"></script>
     <script src="~/Plugin/ckeditor/ckeditor.js"></script>
     <script>
