--- a/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>Chỉnh Sửa</h2>
-@section js{
+@section scripts{
     <script src="~/Plugin/ckfinder/ckfinder.js"></script>
     <script src="~/Plugin/ckeditor/ckeditor.js"></script>
     <script>
@@ -27,52 +27,52 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Bài Viết</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.ID)
+    <div class="form-horizontal">
+        <h4>Bài Viết</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.ID)
 
 
-    <div class="form-group">
-        @Html.Label("Tiêu Đề", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Tiêu Đề", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextAreaFor(model => model.NoiDung, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
-            <script>CKEDITOR.replace("NoiDung")</script>
+        <div class="form-group">
+            @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.NoiDung, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
+                <script>CKEDITOR.replace("NoiDung")</script>
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.Label("Loại Bài Viết", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("LoaiBaiViet", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.LoaiBaiViet, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Loại Bài Viết", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("LoaiBaiViet", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.LoaiBaiViet, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.Label("Người Đăng", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("NguoiDang", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.NguoiDang, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Người Đăng", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("NguoiDang", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.NguoiDang, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
-    @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model => model.ID)
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Lưu" class="btn btn-default" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Lưu" class="btn btn-default" />
+            </div>
         </div>
     </div>
-</div>
 }
 
 <div>
