--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -81,7 +81,10 @@
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i>Quản lí thông tin<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="@Url.Action("Index","DangNhap")">Thông tin đăng nhập</a>
+                                    <a href="#">Sinh viên</a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("Index","DangNhap")">Admin</a>
                                 </li>
                             </ul>
                         </li>
