đăng ký hoạt động

--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -106,6 +106,9 @@
                             <a href="@Url.Action("Index","BaiViets")"><i class="fa fa-dashboard fa-fw"></i>Tin tức - Hoạt động</a>
                         </li>
                         <li>
+                            <a href="#"><i class="fa fa-dashboard fa-fw"></i>Danh sách đăng kí hoạt động</a>
+                        </li>
+                        <li>
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i>Tra cứu<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
