--- a/SEP21/Areas/QuanLy/Views/BaiViets/Index2.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Index2.cshtml
@@ -13,9 +13,14 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
+            <br/>
+            <a href="@Url.Action("Create","BaiViets")">
+                <button type="button" class="btn btn-primary">Tạo bài viết</button>
+            </a>
             <div class="panel-heading">
-                DataTables Advanced Tables
+                Quản lí bài viết
             </div>
+
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <div class="table-responsive">
@@ -25,8 +30,8 @@
                                 <th>Ngày đăng</th>
                                 <th>Tiêu đề</th>
                                 <th>Nội dung</th>
-                                <th>Người đăng</th>
                                 <th>Loại bài viết</th>
+                                <th>Thao tác</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -36,8 +41,12 @@
                                     <td>@item.NgayDangBai</td>
                                     <td>@item.TieuDe</td>
                                     <td>@item.NoiDung</td>
-                                    <td class="center">@item.NhanVienKhoa.HoTen</td>
                                     <td class="center">@item.LoaiBaiViet1.TenLoaiBaiViet</td>
+                                    <td>
+                                        @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = item.ID }) |
+                                        @Html.ActionLink("Chi Tiết", "Details", new { id = item.ID }) |
+                                        @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
+                                    </td>
                                 </tr>
                             }
                         </tbody>
