--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -84,7 +84,7 @@
                                     <a href="#">Sinh viên</a>
                                 </li>
                                 <li>
-                                    <a href="@Url.Action("Index","DangNhap")">Admin</a>
+                                    <a href="@Url.Action("Index","LoginAdmins")">Admin</a>
                                 </li>
                             </ul>
                         </li>
