--- a/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
@@ -49,7 +49,13 @@
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            <label class="control-label col-md-2" for="IMG">Ảnh Tiêu Đề</label>
+            <div class="col-md-10">
+                <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png" />
+            </div>
+            <img id="Picture" />
+        </div>
         <div class="form-group">
             @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -60,7 +66,6 @@
         </div>
 
         <div class="form-group">
-            @Html.ActionLink("Tạo loại bài viết", "Create", "LoaiBaiViets")
             @Html.Label("Loại bài viết", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("LoaiBaiViet", null, htmlAttributes: new { @class = "form-control" })
