--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -57,7 +57,7 @@
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
-                            <a href="#"><i class="fa fa-sign-out fa-fw"></i> Đăng Xuất </a>
+                            <a href="@Url.Action("Logout", "ManagerAdmin" )"><i class="fa fa-sign-out fa-fw"></i> Đăng Xuất </a>
                         </li>
                     </ul>
                 </li>
