--- a/SEP21/Views/BaiViet/Details.cshtml
+++ b/SEP21/Views/BaiViet/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Details</h2>
