--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -3,11 +3,27 @@
     ViewBag.Title = "Home Page";
 }
 <main id="main">
+    <!-- ======= Hero Section ======= -->
+    <section id="hero" class="d-flex align-items-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+                    <h1>Khoa Công nghệ thông tin</h1>
+                    <h2>Đạo đức - ý chí - sáng tạo</h2>
+                    <div class="d-flex justify-content-center justify-content-lg-start">
+                        <a href="https://www.youtube.com/watch?v=mveofh0MZDQ" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+                    <img src="@Url.Content("~/assets/img/hero-img.png")" class="img-fluid animated" alt="">
+                </div>
+            </div>
+        </div>
+    </section><!-- End Hero -->
     <!-- ======= Cliens Section ======= -->
     <section id="cliens" class="cliens section-bg">
         <section id="about" class="about">
             <div class="container" data-aos="fade-up">
-
                 <div class="section-title">
                     <h2>Tin tức - hoạt động</h2>
                 </div>
@@ -16,26 +32,25 @@
                     {
                         <div class="col-lg-6">
                             <div class="card">
-                                <img class="img-fluid" style="max-width:100%" src="@Url.Action("Picture", new { item.ID })" alt="hinhanh">
-                                <div class="card-body">
-                                    <h3 class="card-title">@item.TieuDe</h3>
-                                    <p class="card-text">
-                                        @if (item.NoiDung != null && item.NoiDung.Length > 20)
-                                        {
-                                            @item.NoiDung.Substring(0, 20)
-                                        }
-                                        else
-                                        {
-                                            @item.NoiDung
-                                        }
-                                    </p>
-                                    <p class="text-muted">Last updated 3 mins ago
-                                    @if (item.LoaiBaiViet1.TenLoaiBaiViet == "Hoạt động")
-                                    {
-                                        <a href="@Url.Action("Details", "BaiViet", new { item.ID })" class="btn btn-primary">Đăng ký hoạt động</a>
-                                    }
-                                    </p>
-                                </div>
+                                <a href="@Url.Action("Details","BaiViet", new { item.ID })">
+                                    <img class="img-fluid" style="max-width:100%" src="@Url.Action("Picture", new { item.ID })" alt="hinhanh">
+                                    <div class="card-body">
+                                        <h3 class="card-title">@item.TieuDe</h3>
+                                        <p class="card-text">
+                                            @if (item.NoiDung != null && item.NoiDung.Length > 20)
+                                            {
+                                                @item.NoiDung.Substring(0, 20)
+                                            }
+                                            else
+                                            {
+                                                @item.NoiDung
+                                            }
+                                        </p>
+                                        <p class="text-muted">
+                                            Last updated 3 mins ago
+                                        </p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     }
