--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 <body>
 
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top ">
+    <header id="header" style="background-color:blue" class="fixed-top">
         <div class="container d-flex align-items-center">
 
             <h1 class="logo me-auto"><a href="@Url.Action("Index","Home")">Khoa CNTT</a></h1>
@@ -111,24 +111,6 @@
 
         </div>
     </header><!-- End Header -->
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex align-items-center">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-                    <h1>Khoa Công nghệ thông tin</h1>
-                    <h2>Đạo đức - ý chí - sáng tạo</h2>
-                    <div class="d-flex justify-content-center justify-content-lg-start">
-                        <a href="https://www.youtube.com/watch?v=mveofh0MZDQ" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
-                    </div>
-                </div>
-                <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="@Url.Content("~/assets/img/hero-img.png")" class="img-fluid animated" alt="">
-                </div>
-            </div>
-        </div>
-    </section><!-- End Hero -->
     @RenderBody()
     <!-- ======= Footer ======= -->
     <footer id="footer">
