--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -81,7 +81,7 @@
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i>Quản lí thông tin<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#">Sinh viên</a>
+                                    <a href="@Url.Action("Index","Logins")">Sinh viên</a>
                                 </li>
                                 <li>
                                     <a href="@Url.Action("Index","LoginAdmins")">Admin</a>
