--- a/SEP21/Views/BaiViet/Details.cshtml
+++ b/SEP21/Views/BaiViet/Details.cshtml
@@ -40,10 +40,26 @@
             <div class="row gy-4">
                 <div class="col-lg-12">
                     <div class="portfolio-info">
-                       <textarea name="NoiDung" id="editor" readonly>
+                        @*<textarea name="NoiDung" id="editor" readonly>
                            @Model.NoiDung
-                       </textarea>
+                       </textarea>*@
+                        @Html.Raw(Model.NoiDung);
                         <h3>Để đăng ký hoạt động, vui lòng điền thông tin của bạn</h3>
+                        <form role="form" action="~/BaiViet/Login" method="post">
+                            <input hidden class="form-control" value="@Model.ID" name="id"/>
+                            <div class="form-group">
+                                <label>thông tin đăng nhập</label>
+                                <input class="form-control" name="username">
+                                <p class="help-block">Bao gồm tên.mssv</p>
+                            </div>
+                            <div class="form-group">
+                                <label>Mật khẩu</label>
+                                <input class="form-control" name="password">
+                                <p class="help-block">Mặc định: VLUmssv</p>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Đăng ký</button>
+                            @Html.ActionLink("Forgot your password?", "ForgotPassword", "Account")
+                        </form>
                     </div>
                 </div>
 
