--- a/SEP21/Areas/QuanLy/Views/DangKyHoatDongs/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/DangKyHoatDongs/Index.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.ThoiGianDangKy)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.HoatDong1.TenHoatDong)
+            Tên hoạt động
         </th>
         <th>
             @Html.DisplayNameFor(model => model.SinhVien.MSSV)
@@ -30,7 +30,7 @@
             @Html.DisplayFor(modelItem => item.ThoiGianDangKy)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.HoatDong1.TenHoatDong)
+            @Html.DisplayFor(modelItem => item.BaiViet.TieuDe)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.SinhVien.MSSV)
