--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -92,7 +92,7 @@
                             <a href="@Url.Action("Index","GioiThieux")"><i class="fa fa-dashboard fa-fw"></i>Giới thiệu</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-dashboard fa-fw"></i>Đào tạo</a>
+                            <a href="@Url.Action("Index","DaoTaos")"><i class="fa fa-dashboard fa-fw"></i>Đào tạo</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i>Sinh viên<span class="fa arrow"></span></a>
