--- a/SEP21/Areas/QuanLy/Views/DangKyHoatDongs/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/DangKyHoatDongs/Delete.cshtml
@@ -21,11 +21,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.HoatDong1.TenHoatDong)
+            @Html.DisplayNameFor(model => model.BaiViet.TieuDe)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HoatDong1.TenHoatDong)
+            @Html.DisplayFor(model => model.BaiViet.NoiDung)
         </dd>
 
         <dt>
