--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -98,6 +98,9 @@
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i>Sinh viên<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
+                                    <a href="@Url.Action("Index","SinhViens")">Thông tin sinh viên</a>
+                                </li>
+                                <li>
                                     <a href="@Url.Action("Index","DoanHoiKhoas")">Đoàn hội Khoa</a>
                                 </li>
                             </ul>
